@@ -16,6 +16,8 @@ Version 8.11 (Unreleased)
 - Cleaner install UI when creating a new project.
 - Added support for recording symbols separately in frames independent of the function.
 - Reduce noisy Postgres logs from inserting duplicate onboarding rows.
+- Added export action to group tag details.
+- Improved display of user tags.
 
 Schema Changes
 ~~~~~~~~~~~~~~
